crates/mun_codegen/src/snapshots/test__never_conditional_return_expr.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn main(a:i32) -> i32 {\n    if a > 4 {\n        return a;\n    } else {\n        return a - 1;\n    }\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [1 x %struct.MunTypeInfo addrspace(4)*]

define i32 @main(i32) {
body:
  %greater = icmp sgt i32 %0, 4
  br i1 %greater, label %then, label %else

then:                                             ; preds = %body
  ret i32 %0

else:                                             ; preds = %body
  %sub = sub i32 %0, 1
  ret i32 %sub
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::i32>::name" = private unnamed_addr constant [10 x i8] c"core::i32\00"
@"type_info::<core::i32>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\17yzt\19\D62\17\D25\95C\17\88[\FA", [10 x i8]* @"type_info::<core::i32>::name", i32 32, i8 4, i8 0 }
@global_type_table = global [1 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::i32>"]

