crates/mun_codegen/src/snapshots/test__never_conditional_return_expr_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main(a:int):int {\n    if a > 4 {\n        return a;\n    } else {\n        return a - 1;\n    }\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

